--- a/impressum.html
+++ b/impressum.html
@@ -24,7 +24,7 @@
           </div>
           <ul class="header--navigation nav">
             <li class="nav--link">
-              <a href="#s-offer">Startseite</a>
+              <a href="#s-experts">Startseite</a>
             </li>
           </ul>
           <div class="burger-menu">
@@ -35,7 +35,7 @@
                 <span></span>
                 <span></span>
                 <ul id="menu" class="nav-box">
-                  <li class="nav-box--link"><a href="#s-offer">{Navigation-navi1}</a></li>
+                  <li class="nav-box--link"><a href="#s-experts">{Navigation-navi1}</a></li>
                 </ul>
               </div>
               <div class="backdrop"></div>
@@ -56,7 +56,7 @@
     </div>
     <!-- END BLOCK Hero -->
 
-    <section class="experts">
+    <section class="experts" id="s-experts">
       <div class="container">
         <div class="experts--body">
           <h2 class="experts--title title">Experten auf unserem Gebiet</h2>
@@ -68,3 +68,20 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer--body">
+          <div class="footer--descr">© 2022 Sven's Barber Shop | Alle Rechte vorbehalten</div>
+        </div>
+      </div>
+    </footer>
+  </main>
+
+  <script src="libs/aos/aos.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
+</body>
+
+</html>
