--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
           </div>
           <ul class="header--navigation nav">
             <li class="nav--link">
-              <a href="#s-offer">Startseite</a>
+              <a href="#s-experts">Startseite</a>
             </li>
             <!--START BLOCK About-->
             <li class="nav--link">
-              <a href="#s-about">Preise</a>
+              <a href="#s-price">Preise</a>
             </li>
             <!-- END BLOCK About-->
             <!--START BLOCK Services-->
             <li class="nav--link">
-              <a href="#s-services">Unser shop</a>
+              <a href="#s-about">Unser shop</a>
             </li>
             <!-- END BLOCK Services-->
             <!--START BLOCK Kontakt-->
@@ -50,14 +50,14 @@
                 <span></span>
                 <span></span>
                 <ul id="menu" class="nav-box">
-                  <li class="nav-box--link"><a href="#s-offer">{Navigation-navi1}</a></li>
+                  <li class="nav-box--link"><a href="#s-experts">{Navigation-navi1}</a></li>
 
                   <!--START BLOCK About-->
-                  <li class="nav-box--link"><a href="#s-about">{Navigation-navi2}</a></li>
+                  <li class="nav-box--link"><a href="#s-price">{Navigation-navi2}</a></li>
                   <!-- END BLOCK About-->
 
                   <!--START BLOCK Services-->
-                  <li class="nav-box--link"><a href="#s-services">{Navigation-navi3}</a></li>
+                  <li class="nav-box--link"><a href="#s-about">{Navigation-navi3}</a></li>
                   <!-- END BLOCK Services-->
 
                   <!--START BLOCK Kontakt-->
@@ -83,7 +83,7 @@
     </div>
     <!-- END BLOCK Hero -->
 
-    <section class="experts">
+    <section class="experts" id="s-experts">
       <div class="container">
         <div class="experts--body">
           <h2 class="experts--title title">Experten auf unserem Gebiet</h2>
@@ -95,7 +95,7 @@
         </div>
       </div>
     </section>
-    <section class="benefits">
+    <section class="benefits" id="s-benefits">
       <div class="container">
         <div class="benefits--body">
           <h2 class="benefits--title title">Die beste Pflege für Ihren Bart</h2>
@@ -125,7 +125,7 @@
         </div>
       </div>
     </section>
-    <section class="price">
+    <section class="price" id="s-price">
       <div class="container">
         <div class="price--body">
           <h2 class="price--title title">Prise</h2>
@@ -179,7 +179,7 @@
         </div>
       </div>
     </section>
-    <section class="info">
+    <section class="info" id="s-info">
       <div class="container">
         <div class="info--body">
           <h2 class="info--title title">Die beste Rasur Ihres Lebens</h2>
@@ -192,7 +192,7 @@
         </div>
       </div>
     </section>
-    <section class="about">
+    <section class="about" id="s-about">
       <div class="container">
         <div class="about--body">
           <h2 class="about--title title">Über den Shop</h2>
